Fixing whitespace and textarea bug
find_and_preserve is now used, Haml isn't preserving textarea
tags if they are using dynamic content.
http://haml-lang.com/docs/yardoc/file.HAML_REFERENCE.html#whitespace_preservation

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -8,8 +8,6 @@ a {
 }
 
 textarea {
-    white-space: nowrap;
-    overflow: auto;
     height: 250px;
     width:  800px;
     resize: none;
